src/main/default/objects/Attachment_Ext__c/Attachment_Ext__c.object-meta.xml
<CustomObject>
    <label>Attachment Ext</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Ext</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>