src/main/default/objects/Attachment_Ext__c/fields/AttachmentID__c.field-meta.xml
<CustomField>
    <fullName>AttachmentID__c</fullName>
    <externalId>true</externalId>
    <label>AttachmentID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>