src/main/default/objects/Attachment_Ext__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>