src/main/default/objects/Attachment_Ext__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <label>Parent ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>