src/main/default/objects/Attachment_Ext__c/fields/SyncToMobile__c.field-meta.xml
<CustomField>
    <fullName>SyncToMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync To Mobile</label>
    <type>Checkbox</type>
</CustomField>